--- a/site/style.css
+++ b/site/style.css
@@ -1,11 +1,39 @@
-body, h1, h2, h3, h4, h5{
-    font-family: "Raleway", sans-serif;
+body, h1, h3, h4, h5{
+    font-family: Georgia,'Georgia W01 Regular','serif';
+}
+h1 {
+    font-family: Georgia,'Georgia W01 Regular','serif'!important;
+}
+h2 {
+    font-family: 'Belanosima', sans-serif;
+    color: #49485B;
 }
 p { 
     font-size: large;
+    font-family: Georgia,'Georgia W01 Regular','serif';
+    font-size: 18px;
+    line-height: 1.7;
+    margin: 0;
+    text-align: left;
+    margin-bottom: 36px;
+    letter-spacing: 0.35px;
+    color: #2D2D30;
  }
 body.w3-light-grey w3-content{
     max-width: 1600px;
+}
+.w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32 {
+    background-color: white;
+}
+#titoli
+.main-titles {
+    font-weight: 700;
+    font-size: 2rem;
+    line-height: 2.25rem;
+    border-bottom: 0.7rem solid #1d1c22;
+    color: #2D2D2D;
+    margin: 0 auto;
+    padding-bottom: 1rem;
 }
 
 #sidebar-container {
@@ -21,13 +49,111 @@ body.w3-light-grey w3-content{
 #mySidebar {
   width: 100%;
 }
-
+.TableOfContentsContainer {
+    padding-top: 10px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+}
+.ElementWrapper-choicer {
+    cursor: pointer;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 12px;
+    position: relative;
+    width: auto;
+    text-decoration: none;
+}
+.pallino {
+    background-color: #E5FC56;
+    border: 2px solid #fff;
+    border-radius: 18px;
+    display: inline-block;
+    height: 10px;
+    line-height: 1.5rem;
+    margin: auto 12px auto 0;
+    max-width: 10px;
+    min-height: 10px;
+    min-width: 10px;
+    position: relative;
+    width: 10%;
+}
+.pallino::after {
+    content: '';
+    position: absolute;
+    top: -4px;
+    left: -4px;
+    right: -4px;
+    bottom: -4px;
+    background: #000000;
+    border-radius: 18px;
+    z-index: -1;
+}
+.scritta {
+    display: inline-block;
+    color: #000000;
+    line-height: 1.5rem;
+    max-width: 165px;
+    vertical-align: middle;
+    width: 90%;
+    font-family: 'Belanosima', sans-serif;
+}
+.css-nx0d73-TocLine {
+    background: rgb(0, 0, 0);
+    bottom: 8px;
+    height: calc((95% - 91px) - -10px);
+    margin-bottom: 36px;
+    margin-left: 6px;
+    position: absolute;
+    width: 1px;
+    z-index: 39;
+}
+.css-nx0d73-TocLine {
+    background: rgb(0, 0, 0);
+    bottom: 8px;
+    height: calc((95% - 91px) - -10px);
+    margin-bottom: 36px;
+    margin-left: 6px;
+    position: absolute;
+    width: 1px;
+    z-index: 39;
+}
+.scritta-menu {
+    display: inline-block;
+    color: #000000;
+    line-height: 1.5rem;
+    max-width: 165px;
+    vertical-align: middle;
+    width: 90%;
+}
+.menu-line {
+    background: rgb(0, 0, 0);
+    bottom: 0px;
+    width: calc((100% - 60px) - 25px);
+    margin-bottom: 36px;
+    margin-left: 7px;
+    position: absolute;
+    width: 1px;
+    z-index: -2;
+}
+#about{
+    background-color: #E1E1E1!important;
+}
 @media (max-width: 600px) {
   #sidebar-container {
     display: none;
   }
 }
-
+.main-titles {
+    font-size: 3rem;
+    line-height: 3.375rem;
+    border-bottom: 0.4rem solid #1d1c22;
+    color: #2D2D2D;
+    margin: 0 auto;
+    padding-bottom: 1rem;
+}
 .w3-third img{
     margin-bottom: 6px;
     opacity: 0.8;
@@ -107,7 +233,7 @@ div.w3-third img{
 #img01 {
   margin: auto;
   display: block;
-  width: 80%;
+  width: 74%;
 }
 
 #caption{
@@ -115,10 +241,11 @@ div.w3-third img{
 }
 /* Stile per grafici importato da codice di Giorgia*/
  #vis.vega-embed {
-      width: 80%;
+      width: 75%;
       display: block;
       margin-left: auto;
       margin-right: auto;
+      padding:8%;
     }
 
     #vis.vega-embed details,
