--- a/site/style.css
+++ b/site/style.css
@@ -1,4 +1,4 @@
-body{
+body, h1, h2, h3, h4, h5{
     font-family: "Raleway", sans-serif;
 
 }
@@ -26,29 +26,11 @@ body.w3-light-grey w3-content{
     max-width: 1600px;
 }
 
-#content {
-    position: relative;
-    display: flex;
-    padding-right:10%;
-    padding-left: 10%;
+div.w3-main{
+    margin-left: 300px;
 }
 
-#sidebar-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 250px; /* Larghezza del menu di navigazione */
-  height: 100%;
-  overflow-y: auto;
-  z-index: 100;
-
-}
-
-.w3-main {
-    flex: 1;
-    margin-left: 15%; /* Sposta il contenuto a destra per far spazio alla sidebar */
-}
-top-of-toc
+/*top-of-toc*/
 
 #titoli
 .main-titles {
@@ -60,16 +42,6 @@ top-of-toc
     margin: 0 auto;
     padding-bottom: 1rem;
 }
-
-/*#sidebar-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 15%;
-  height: 100%;
-  overflow-y: auto;
-  z-index: 100;
-}*/
 
 .TableOfContentsContainer {
     padding-top: 10px;
@@ -159,9 +131,7 @@ top-of-toc
     width: 1px;
     z-index: -2;
 }
-/*#about{
-    background-color: #E1E1E1!important;
-}*/
+
 .visualization {
     display: none; /* Hide all visualizations by default */
   }
@@ -197,11 +167,11 @@ button {
     border-radius: 5px;
 }
 
-/*#mySidebar{
+#mySidebar{
     z-index: 3;
-    width: 15%;
+    width: 300px;
     font-weight: bold;
-}*/
+}
 
 #myOverlay{
     cursor:pointer;
@@ -232,13 +202,13 @@ div.w3-row-padding{
     margin: 0 -16px;
 }
 
-/*div.w3-content{
+div.w3-content{
     max-width: 600px;
 }
 
 div.w3-content w3-justify{
     max-width: 600px;
-}*/
+}
 
 .image-container{
     float: left;
@@ -271,44 +241,6 @@ div.w3-third img{
 #caption{
 
 }
-/* Stile per grafici importato da codice di Giorgia*/
- .vis.vega-embed {
-    width: 100%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1%;
-}
-
-.vega-embed summary {
-    display: none;
-}
-
-    .vis.vega-embed details,
-    .vis.vega-embed details summary {
-      position: relative;
-      display: none;
-    }
-
-  @media (max-width: 600px) {
-  vis {
-    width: 50%;
-      overflow: hidden;
-  }
-}
-
-  ul {
-      font-size: 18px;
-      font-family: Georgia, 'Times New Roman', Times, serif;
-  }
-button {
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-.visualization {
-    display: none; /* Hide all visualizations by default */
-}
 
 #authors, #teachers, #project {
     list-style-type: none;
@@ -323,4 +255,43 @@ button {
 #about, #utilizzi{
     background-color: #F1F1F1!important;
     color: #616161!important;
+}
+
+/* Stile per grafici importato da codice di Giorgia*/
+.vis.vega-embed {
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1%;
+}
+
+.vega-embed summary {
+    display: none;
+}
+
+.vis.vega-embed details,
+.vis.vega-embed details summary {
+    position: relative;
+    display: none;
+}
+
+@media (max-width: 600px) {
+    vis {
+        width: 50%;
+        overflow: hidden;
+    }
+}
+
+ul {
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+button {
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.visualization {
+    display: none; /* Hide all visualizations by default */
 }
