--- a/site/style.css
+++ b/site/style.css
@@ -267,6 +267,10 @@ div.w3-third img{
     display: block;
 }
 
+.graphics-btn-container{
+    margin-bottom: 10px;
+}
+
 /* Stile per grafici importato da codice di Giorgia*/
 .vis.vega-embed {
     width: 100%;
