Add topic modeling chart

--- a/site/style.css
+++ b/site/style.css
@@ -251,7 +251,7 @@ div.w3-third img{
     /*color: #616161!important;*/
 }
 
-#about, #contact {
+#sentiment, #trends {
     background-color: #616161!important;
     color: #F1F1F1!important;
 
