--- a/site/style.css
+++ b/site/style.css
@@ -262,6 +262,11 @@ div.w3-third img{
     margin-bottom: 10px;
 }
 
+#graphics-container-words2 {
+    display: none;
+    padding-top: 10px;
+}
+
 /* Stile per grafici importato da codice di Giorgia*/
 .vis.vega-embed {
     width: 100%;
