--- a/site/style.css
+++ b/site/style.css
@@ -9,7 +9,10 @@ h1 {
 button:active{
     color:#75AB9E!important;
 }
-
+.buttonActive{
+    background-color: #75AB9E!important;
+    color: white!important;
+}
 p, #reddit_future_use, #reddit_use {
     font-size: large;
     font-size: 18px;
